# map-

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  README.md  build_release_onedir.bat  build_release_onefile.bat  install_build_env.bat  pyproject.toml  requirements.txt  requirements_win7_old_python38.txt  run_source_debug.bat
data/: config.json  current_wind_farm.txt  device_maps.csv  extra_rules.txt
docs/: build-and-release.md  maintenance.md  rules.md  user-guide.md
rules/三个山风电一场/: device_maps.csv  relations_cloud.csv  rule_profile.json
rules/示例_每个Sheet一台风机/: device_maps.csv  extra_rules.txt  relations.csv  rule_profile.json
rules/示例_行式规则风场/: device_maps.csv  relations.csv  rule_profile.json
rules/红山嘴风电一场/: relations.csv  rule_profile.json
scripts/: build_release.ps1  clean.ps1  install_dev.ps1  run_dev.ps1
src/: MapFanSim.py  __init__.py
