[project]
name = "mapfansim"
version = "8.0.0"
description = "Windows desktop tool for wind turbine MAP replacement and SFTP synchronization."
requires-python = ">=3.10"
dependencies = [
  "paramiko==3.5.0",
  "openpyxl==3.1.5",
  "xlrd==1.2.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller==6.10.0",
]

[tool.pyinstaller]
entry = "src/MapFanSim.py"

